--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,6 +1,6 @@
-<% provide(:title, "Help") %>
+<% provide(:title, "About") %>
 
-    <h1>Help</h1>
+    <h1>About</h1>
     <p>
       This is the home page for the
       <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
